# TelegramAiAssistant

./: .replit  README.md  app.py  config.yaml  main_fastapi.py  models.py  pyproject.toml  requirements.txt
.config/.semgrep/: settings.yml
ai_core/: context_builder.py  model_client.py  summarizer.py
app/: dispatcher.py  memory_store.py  prompt_engine.py  response_format.py  telegram_webhook.py
attached_assets/: arsitektur_bot_telegram_ai.txt
db/: chat_logs.sqlite
document_handler/: classifier.py  image_ocr.py  parser_docx.py  parser_pdf.py  parser_xlsx.py
knowledge_base/: retriever.py
utils/: construction_calc.py  file_utils.py  logger.py
